tests/baselines/reference/parserIndexSignature3.errors.txt
==== tests/cases/compiler/parserIndexSignature3.ts (1 errors) ====
    interface I {
      [a?]
       ~~
!!! parserIndexSignature3.ts(2,4): error TS1019: Index signature parameter cannot have a question mark.
    }